# hardcover-sync

./: .env.example  .gitignore  .gitlint  .lefthook.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  cliff.toml  justfile  mise.toml  pyproject.toml
.calibre/: .gitignore  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: build_env.py  bump.sh  bundle.sh
shims/: pytest
src/hardcover_sync/: __init__.py  _version.py  action.py  api.py  cache.py  config.py  matcher.py  models.py  queries.py  sync.py
src/hardcover_sync/dialogs/: __init__.py  add_to_list.py  base.py  link_book.py  remove_from_list.py  sync_from.py  sync_to.py  update_progress.py
test/: conftest.py  qt_shim.py  test_api.py  test_bundle.py  test_cache.py  test_config.py  test_dialogs.py  test_integration.py  test_matcher.py  test_sync.py  test_sync_logic.py
test/qt_tests/: conftest.py  test_qt_widgets.py
